@@ -1,3 +1,4 @@
+ * Copy password from generator #697
  * Fix Magikeyboard not fully visible #772
  * Fix change font size #770
  * Small fixes #771
