@@ -1,3 +1,4 @@
+ * Copie du mot de passe depuis le générateur #697
  * Correction Magiclavier non complètement visible #772
  * Correction du changement de police #770
  * Petites corrections #771
