@@ -1,4 +1,5 @@
 KeePassDX(2.9.1)
+ * Copy password from generator #697
  * Fix Magikeyboard not fully visible #772
  * Fix change font size #770
  * Small fixes #771
